--- a/Company.Repository/Company.Repository.csproj
+++ b/Company.Repository/Company.Repository.csproj
@@ -1,13 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Company.Service\Company.Service.csproj" />
+    <ProjectReference Include="..\Company.Data\Company.Data.csproj" />
   </ItemGroup>
 
 </Project>
