--- a/WebApplication1/Company.Web.csproj
+++ b/WebApplication1/Company.Web.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Company.Service\Company.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
 </Project>
